# CppCommon

./: .appveyor.yml  .gitattributes  .gitignore  .gitlinks  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  _formulas.tex  _formulas_dark.tex  algorithms_threads_token_bucket_8cpp-example.html  algorithms_token_bucket_8cpp-example.html  allocator_8h.html  allocator_8h_source.html  allocator_8inl.html  allocator_8inl_source.html  allocator__arena_8h.html  allocator__arena_8h_source.html  allocator__arena_8inl.html  allocator__arena_8inl_source.html  allocator__heap_8h.html  allocator__heap_8h_source.html  allocator__heap_8inl.html  allocator__heap_8inl_source.html  allocator__hybrid_8h.html  allocator__hybrid_8h_source.html  allocator__hybrid_8inl.html  allocator__hybrid_8inl_source.html  allocator__null_8h.html  allocator__null_8h_source.html  allocator__null_8inl.html  allocator__null_8inl_source.html  allocator__pool_8h.html  allocator__pool_8h_source.html  allocator__pool_8inl.html  allocator__pool_8inl_source.html  allocator__stack_8h.html  allocator__stack_8h_source.html  (+1017 more)
.claude/: CLAUDE.md
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos.yml  build-windows-cygwin.yml  build-windows-mingw.yml  build-windows-msvc.yml  build-windows-msys2.yml  doxygen.yml
documents/: Doxyfile
examples/: algorithms_token_bucket.cpp  cache_filecache.cpp  cache_memcache.cpp  common_flags.cpp  common_function.cpp  common_uint128.cpp  common_uint256.cpp  containers_bintree.cpp  containers_flatmap.cpp  containers_hashmap.cpp  containers_list.cpp  containers_queue.cpp  containers_stack.cpp  debug_source_location.cpp  debug_stack_trace.cpp  errors_exceptions.cpp  errors_exceptions_handler.cpp  errors_fatal.cpp  errors_source_location.cpp  errors_system_error.cpp  filesystem_directory.cpp  filesystem_directoryr.cpp  filesystem_file.cpp  filesystem_path.cpp  filesystem_symlink.cpp  filesystem_touch.cpp  intrusive_bintree.cpp  intrusive_list.cpp  intrusive_queue.cpp  intrusive_stack.cpp  math_math.cpp  memory_arena.cpp  memory_leaks.cpp  memory_memory.cpp  memory_pool.cpp  mpmc_ring_queue.cpp  mpsc_linked_queue.cpp  ring_buffer.cpp  ring_queue.cpp  spsc_ring_buffer.cpp  (+65 more)
include/: version.h
include/algorithms/: token_bucket.h  token_bucket.inl
include/cache/: filecache.h  filecache.inl  memcache.h  memcache.inl
include/common/: flags.h  flags.inl  function.h  function.inl  reader.h  uint128.h  uint128.inl  uint256.h  uint256.inl  version.h  writer.h
include/containers/: bintree.h  bintree.inl  bintree_aa.h  bintree_aa.inl  bintree_avl.h  bintree_avl.inl  bintree_rb.h  bintree_rb.inl  bintree_splay.h  bintree_splay.inl  flatmap.h  flatmap.inl  hashmap.h  hashmap.inl  list.h  list.inl  queue.h  queue.inl  stack.h  stack.inl
modules/: CMakeLists.txt  CppBenchmark.cmake  catch.cmake  cpp-optparse.cmake  fmt.cmake  vld.cmake
perf/: debug_stack_trace.cpp  filesystem_file.cpp  mpsc_linked_queue.cpp  mpsc_ring_queue.cpp  spsc_ring_buffer.cpp  system_rdts.cpp  system_stack_trace.cpp  system_timestamp.cpp  threads_critical_section.cpp  threads_file_lock.cpp  threads_mpmc_ring_queue.cpp  threads_mpmc_ring_queue_ex.cpp  threads_mpsc_linked_batcher.cpp  threads_mpsc_linked_queue.cpp  threads_mpsc_ring_buffer.cpp  threads_mpsc_ring_queue.cpp  threads_mutex.cpp  threads_named_critical_section.cpp  threads_named_mutex.cpp  threads_named_rw_lock.cpp  threads_named_semaphore.cpp  threads_rw_lock.cpp  threads_semaphore.cpp  threads_spin_lock.cpp  threads_spsc_ring_buffer.cpp  threads_spsc_ring_queue.cpp  threads_thread.cpp  time_rdts.cpp  time_time.cpp  time_timestamp.cpp  time_timezone.cpp
performance/: common_function.cpp  containers_bintree.cpp  containers_flatmap.cpp  containers_hashmap.cpp  filesystem_file.cpp  intrusive_bintree.cpp  memory_managers.cpp  order_book.cpp  string_format.cpp  system_pipe.cpp  system_stack_trace.cpp  system_uuid.cpp  threads_critical_section.cpp  threads_file_lock.cpp  threads_mpmc_ring_queue.cpp  threads_mpsc_linked_batcher.cpp  threads_mpsc_linked_queue.cpp  threads_mpsc_ring_buffer.cpp  threads_mpsc_ring_queue.cpp  threads_mutex.cpp  threads_named_critical_section.cpp  threads_named_mutex.cpp  threads_named_rw_lock.cpp  threads_named_semaphore.cpp  threads_rw_lock.cpp  threads_semaphore.cpp  threads_seq_lock.cpp  threads_spin_lock.cpp  threads_spsc_ring_buffer.cpp  threads_spsc_ring_queue.cpp  threads_thread.cpp  threads_wait_batcher.cpp  threads_wait_queue.cpp  threads_wait_ring.cpp  time_time.cpp  time_timestamp.cpp  time_timezone.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+120 more)
tests/: test.cpp  test.h  test_algorithms_token_bucket.cpp  test_cache_filecache.cpp  test_cache_memcache.cpp  test_common_flags.cpp  test_common_function.cpp  test_common_uint.cpp  test_containers_bintree.cpp  test_containers_flatmap.cpp  test_containers_hashmap.cpp  test_containers_list.cpp  test_containers_queue.cpp  test_containers_stack.cpp  test_debug_source_location.cpp  test_debug_stack_trace.cpp  test_errors_source_location.cpp  test_errors_system_error.cpp  test_filesystem_directory.cpp  test_filesystem_file.cpp  test_filesystem_path.cpp  test_filesystem_symlink.cpp  test_intrusive_bintree.cpp  test_intrusive_list.cpp  test_intrusive_queue.cpp  test_intrusive_stack.cpp  test_math_math.cpp  test_memory_allocators.cpp  test_memory_memory.cpp  test_mpmc_ring_queue.cpp  test_mpmc_ring_queue2.cpp  test_mpsc_linked_batcher.cpp  test_ring_buffer.cpp  test_ring_queue.cpp  test_spsc_ring_buffer.cpp  test_string_encoding.cpp  test_string_format.cpp  test_string_password.cpp  test_string_secure.cpp  test_string_utils.cpp  (+61 more)
(+302 files in other folders)
